simple/test/features/errors/codegen/e2008_failed_build_gep.spl
# E2008: Failed to Build GEP

Feature: E2008 - Failed to Build GEP Instruction
  As a Simple compiler
  I want to detect failures in building getelementptr instructions
  So that internal compiler errors are reported

  Background:
    Given I have the Simple compiler

  Scenario: GEP instruction build failure
    When I compile with codegen:
      '''
      struct Data:
        field: i32

      fn test():
        val d = Data { field: 42 }
        # Code that triggers GEP failure
        val ptr = &d.problematic_field
      '''
    Then I should see error E2008
    And the error message should be "failed to build getelementptr instruction"
    And the label should indicate "codegen failed here"
    And the help should suggest "this is an internal compiler error, please report it"

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile with codegen:
      '''
      struct Data:
        field: i32

      fn test():
        val d = Data { field: 42 }
        val ptr = &d.problematic_field
      '''
    Then I should see error E2008
    And the error message should contain "GEP 명령 빌드 실패"
